--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "podcast-engine",
   "version": "0.0.1",
-  "description": "Podcast client that uses the gpodder API",
-  "main": "index.js",
+  "description": "",
+  "main": "javascript/index.js",
+  "dependencies": {
+    "http": "0.0.0"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node index.js"
+    "start" : "node javascript/index.js"
   },
   "repository": {
     "type": "git",
